# vedai

./: .gitignore  LICENSE  README.md  context_engine.py  git_status.txt  hardware_engine.py  installer.py  main.py  model_orchestrator.py  pyproject.toml  requirements.txt  rescue.py  vedai.spec
backend/: main.py
backend/agents/: executor.py  planner.py  prompts.py  runtime.py  self_corrector.py  verifier.py
backend/core/: ollama.py  state.py
backend/memory/: context_memory.py  project_memory.py
backend/tools/: filesystem.py  terminal.py
src/.vedai/: symbols.db
src/vedai/: app.py  cli.py  server.py
src/vedai/engine/: agent.py  context.py  graph.py  ollama.py  tools.py  vscode_manager.py
src/vedai/ui/: dashboard.py  studio.html
vedai/: .gitignore  index.html
vedai/src/vedai/: cli.py
vedai/src/vedai/engine/: context.py  hardware.py  tools.py
vedai/src/vedai/ui/: dashboard.py
